OO-2036: allow open in new window in author list, for static tabs